[project]
name = "statusq-cpu"
version = "1.3.0"
description = "Real-time CPU monitor. Track performance, temperature, and usage stats instantly."
readme = "README.md"
authors = [{name = "Ricardo Torrellas", email = "ricardo.torrejas@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "cc-statusq-cpu>=0.8.1",
    "core-cpu-monitor==0.2.2",
    "core-log-engine==0.2.2",
    "gitchangelog>=3.0.4",
    "numpy>=2.4.2",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
# Longitud máxima de línea (estándar es 88 o 100)
line-length = 130

[tool.ruff.lint]
# Selecciona las reglas a aplicar
# E: pycodestyle, F: Pyflakes, I: isort (orden de imports)
select = ["E", "F", "I"]
# Ignora reglas específicas si te resultan molestas
ignore = []

[tool.ruff.format]
# Ruff también puede formatear tu código automáticamente
quote-style = "double"
